--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif; 
 }
 
 html {
@@ -364,11 +364,11 @@ article .icon {
   background: rgb(250, 250, 250);
 }
 
-.project-img {
+/* .project-img {
   border-radius: 2rem;
   width: 90%;
   height: 90%;
-}
+} */
 
 .project-title {
   margin: 1rem;
